# C_Cpp_Study

./: 0806.c  1.cpp  17.c  2.cpp  704.c  912.c  CMakeLists.txt  README.md  object_study.cpp  str_study.cpp  test.c  test.cpp
Cpp/: LittleEndian_study.cpp  atoi_study.cpp  basic_data_type.cpp  binary_one_number.cpp  binary_study.cpp  bind_study.cpp  circular_reference.cpp  closure_study.cpp  constructor_study.cpp  cpp_thread.cpp  curl_test.cpp  delete_study.cpp  empty_class_size.cpp  explicitly_study.cpp  file_study.cpp  forward_study.cpp  functor_study.cpp  future_study.cpp  gtest_study.cpp  hash_study.cpp  hash_table_study.cpp  heap_study.cpp  hello_cpp.cpp  how_member_obejct_init.cpp  int_overflow.cpp  intellijent_pointer.cpp  ip_to_int.cpp  lambda_study.cpp  list_study.cpp  log_study.cpp  map_study.cpp  min_heap_study.cpp  mutual_include.cpp  my_string.cpp  new_study.cpp  overload_operators.cpp  override_study.cpp  pointer_study.cpp  polymorphic_study.cpp  preprocess_study.c  (+27 more)
Cpp/algorithm_study/: ali_0416_1.cpp  ali_0416_2.cpp  bag01.cpp  binary_one_number.cpp  delete_list_node.cpp  diagonal_output.cpp  min_neighbor_diff.cpp  minimal_k_number.cpp  red_envelopes.cpp  reverse_linkedlist.cpp  sort.cpp  xipai.cpp
Cpp/leetcode/: README.md  tx_0418_5.cpp
Cpp/newcoder/: JZ1.cpp  JZ10.cpp  JZ11.cpp  JZ12.cpp  JZ16.cpp  JZ17.cpp  JZ19.cpp  JZ2.cpp  JZ20.cpp  JZ3.cpp  JZ30.cpp  JZ38.cpp  JZ45.cpp  JZ47.cpp  JZ48.cpp  JZ50.cpp  JZ51.cpp  JZ6.cpp  JZ62.cpp  JZ65.cpp  JZ9.cpp  NC1.cpp  NC100.cpp  NC101.cpp  NC102.cpp  NC103.cpp  NC105.cpp  NC107.cpp  NC109.cpp  NC111.cpp  NC118.cpp  NC12.cpp  NC126.cpp  NC127.cpp  NC13.cpp  NC132.cpp  NC133.cpp  NC136.cpp  NC137.cpp  NC14.cpp  (+63 more)
Cpp/newcoder/over_60/: NC128.cpp  NC32.cpp  NC40.cpp  NC97.cpp
Cpp/newcoder/to_do/: NC10.cpp  NC113.cpp  NC12.cpp  NC120.cpp  NC128.cpp  NC129.cpp  NC132.cpp  NC136.cpp  NC137.cpp  NC140.cpp  NC151.cpp  NC18.cpp  NC20.cpp  NC24.cpp  NC25.cpp  NC26.cpp  NC37.cpp  NC38.cpp  NC44.cpp  NC45.cpp  NC46.cpp  NC55.cpp  NC60.cpp  NC79.cpp  NC8.cpp  NC82.cpp  NC86.cpp  NC89.cpp  NC90.cpp  NC97.cpp  NC99.cpp
Cpp/newcoder/to_optimize/: NC102.cpp
Cpp/todo/: second_degree_friend.cpp
OpenSSL_Study/: README.md
OpenSSL_Study/base_BIO_example/: README.md  file_bio.cpp  mem_bio.c
OpenSSL_Study/cert/: client_1.cnf  client_1.crt  client_1.csr  client_1.key  client_1.p12  root.crt  root.csr  root.key  root.srl  server.cnf  server.crt  server.csr  server.key
OpenSSL_Study/cert/TX_root/: client.crt  client.csr  client.key  client.p12  tx_root.crt  tx_root.csr  tx_root.key  tx_root.srl
OpenSSL_Study/cert_example/: README.md  load_cert.c
OpenSSL_Study/error_example/: error_example.cpp
OpenSSL_Study/http_example/: README.md  http_client.c  http_web_server.c  multithread_webserver.c
OpenSSL_Study/https_example/: README.md  https_client.c  https_client_2.c  oneway_https_webserver.c  oneway_https_webserver_2.c  test_client.cpp  test_server.cpp  twoway_https_client.cpp  twoway_https_webserver.c  twoway_thread_webserver.c
OpenSSL_Study/socket_example/: socket_bio_client.cpp  socket_bio_server.cpp  socket_client_2.c
Win_Socket/: CMakeLists.txt  README.md  test.c
Win_Socket/AnonymousPipes/: ano_pipe_server.c
Win_Socket/IOCP/: IOCP_client.cpp  IOCP_server.cpp
Win_Socket/base_socket/: dos_query.c  select_study.c  socket_client.c  socket_client.cpp  socket_server.c  socket_server.cpp
Win_Socket/namedpipe/: pipe_server.c
Win_Socket/sample_socket/: socket_client.c
Win_Socket/web_server/: http_web_server.c
c/: 2015_807.c  2020_807.c  2021_807.c  base64_encode.c  basic_data_type.c  big_number.c  byte_alignment.c  c_or_cpp.c  change_pointer.c  clear_number_3rd.c  const_study.c  const_test.c  file_study.c  for_char.c  get_cmd_args.c  hash_table.c  hello.c  macro.c  main_args.c  malloc_study.c  math_study.c  max_divisor.c  minimal_exe.c  pointer.c  pointer_study.c  print_format.c  printf_sleep.c  str_study.c  tell_me_which_std.c  thread_test.c  time_study.c  url_decode.c  variable_arg.c  write_file.c
c/algorithm_example/: control_cpu_ratio.c  eight_queens.c  fast_slow_pointer.c  words_reverse.c
c/algorithm_study/: control_cpu_ratio.c  eight_queens.c  fast_slow_pointer.c  tranverse_tree.c
c/binary_tree/: tranverse_tree.c
c/cmake_test/: 1.c  2.c
c/data_structure/: linked_list.c
c/dll_study/: load_dll.c  my_dll.c
c/global_init/: README.md  a.h  b.h  global_variable.cpp
c/leetcode/: 1208.c  17.c  643.c  704.c  912.c
c/thread_example/: async_log.c  how_many_thread_is_best.c  read_write_lock.c  thread_basic_create.c  thread_error.c  thread_mutex.c  thread_scanf.c  thread_study.c
g_test_study/: gtest1.cpp
include/: applink.c  getopt.h
include/my_openssl1.1.0g/: applink.c
win/: create_process_study.cpp
win/Win_Socket/: README.md
win/Win_Socket/AnonymousPipes/: README.md
win/Win_Socket/IOCP/: IOCP_client.cpp  IOCP_server.cpp
win/Win_Socket/namedpipe/: README.md  pipe_client.c
win/Win_Socket/select/: select_study.c
win32/: README.md  cmd_args.cpp  encode_decode.cpp  messagebox.cpp
win32/ui/: create_window.cpp  inputbox.cpp  messagebox.cpp
written_examination/0418_tx/: tx_0418_1.cpp  tx_0418_2.cpp  tx_0418_3.cpp  tx_0418_4.cpp
written_examination/0801_iqy/: 0801_iqy_2.cpp  0801_iqy_3.cpp  0801_iqy_4.cpp
written_examination/0802_ali/: 0802_ali_1.cpp  0802_ali_2.cpp
written_examination/0807_qixinan/: 1.cpp  2.cpp
written_examination/0815_kedaxunfei/: 0815_kedaxunfei_1.cpp  0815_kedaxunfei_2.cpp  0815_kedaxunfei_3.cpp
written_examination/0815_meituan/: 0815_meituan_1.cpp  0815_meituan_2.cpp  0815_meituan_3.cpp  0815_meituan_4.cpp  0815_meituan_5.cpp
written_examination/0821_jingdong/: 0821_jingdong_1.cpp  0821_jingdong_2.cpp
written_examination/0821_wangyi/: 0821_wangyi_1.cpp  0821_wangyi_2.cpp  0821_wangyi_3.cpp  0821_wangyi_4.cpp
written_examination/0905_tx/: 0905_tx_1.cpp
written_examination/0907_baidu/: 0907_baidu_1.cpp
written_examination/0912_bytedance/: 0912_bytedance_1.cpp
